--- a/conf/emails.properties
+++ b/conf/emails.properties
@@ -9,3 +9,13 @@
 #mail.smtp.starttls.enable=true
 #mail.smtp.auth=true
 
+# Configuration example for using the GMAIL SMTP server.
+mail.smtp.from= #your mail
+mail.smtp.password= #your pass
+mail.smtp.host=smtp.gmail.com
+mail.smtp.user= # your mail
+mail.smtp.port=587
+mail.smtp.starttls.enable=true
+mail.smtp.auth=true
+mail.smtp.debug=true
+
