add new NMEA and uBlox plugins

--- a/gsn/tools/backlog/python/backlog.cfg
+++ b/gsn/tools/backlog/python/backlog.cfg
@@ -334,6 +334,12 @@ BinaryPlugin = 0
 
 VaisalaWXT520Plugin = 0
 
+# Read NMEA data and transmit it to GSN.
+NMEAPlugin = 0
+
+# Read data from a ublox chip and transmit it to GSN.
+UbloxPlugin = 0
+
 # Read GPS data and transmit it to GSN.
 GPSPlugin = 0
 
@@ -373,6 +379,34 @@ backlog = true
 # messages.
 
 #poll_interval = 30
+
+
+[NMEAPlugin_options]
+priority = 5
+backlog = true
+
+# The device to get the data from
+# Can be either a filename, a serial port or a tcp socket
+device_name = tcp:localhost:2222
+
+
+[UbloxPlugin_options]
+priority = 5
+backlog = true
+
+# The device to get the data from
+# Can be either a filename, a serial port or a tcp socket
+device_name = /dev/ttyACM0
+
+# If the device is a serial port the baudrate has to be
+# specified
+baudrate = 115200
+
+# Connect to a remote u-blox socket and forward its messages
+# to the local device
+remote_ublox_ip = 
+remote_ublox_port = 
+
 
 [GPSPlugin_options]                                   
 # See SVN: doc/wireless_gps/GPSPlugin for documentation!!
