add relay and comm classes

--- a/gsn/tools/backlog/python/backlog.cfg
+++ b/gsn/tools/backlog/python/backlog.cfg
@@ -394,18 +394,31 @@ device_name = tcp:localhost:2222
 priority = 5
 backlog = true
 
-# The device to get the data from
+# The primary device to read the data from, write it to
+# backlog and if needed to a file.
+# Can be either a filename, a serial port or a tcp socket.
+dev_primary = /dev/ttyACM0
+
+# If the primary device is a serial port the baudrate has
+# to be specified.
+dev_primary_baudrate = 115200
+
+# OPTIONAL: A filename to write messages from the primary
+# device.
+dev_primary_file = 
+
+# OPTIONAL: A port number on the localhost to which
+# messages from the primary device should be forwarded to.
+dev_dispatch = 5555
+
+# OPTIONAL: A host/device to read the data from and relay it
+# directly to the primary device.
 # Can be either a filename, a serial port or a tcp socket
-device_name = /dev/ttyACM0
+dev_relay = tcp:localhost:6666
 
-# If the device is a serial port the baudrate has to be
-# specified
-baudrate = 115200
-
-# Connect to a remote u-blox socket and forward its messages
-# to the local device
-remote_ublox_ip = 
-remote_ublox_port = 
+# If the directly forwarding device is a serial port the
+# baudrate has to be specified.
+dev_relay_baudrate = 
 
 
 [GPSPlugin_options]                                   
