add remote configure and complete relay functionality

--- a/gsn/tools/backlog/python/backlog.cfg
+++ b/gsn/tools/backlog/python/backlog.cfg
@@ -403,13 +403,16 @@ dev_primary = /dev/ttyACM0
 # to be specified.
 dev_primary_baudrate = 115200
 
-# OPTIONAL: A filename to write messages from the primary
+# OPTIONAL: A folder for the message files from the primary
 # device.
-dev_primary_file = 
+primary_folder = 
 
 # OPTIONAL: A port number on the localhost to which
 # messages from the primary device should be forwarded to.
 dev_dispatch = 5555
+
+# OPTIONAL: If only RTCM3 messages should be dispatched
+dispatch_only_rtcm3 = 
 
 # OPTIONAL: A host/device to read the data from and relay it
 # directly to the primary device.
@@ -419,6 +422,9 @@ dev_relay = tcp:localhost:6666
 # If the directly forwarding device is a serial port the
 # baudrate has to be specified.
 dev_relay_baudrate = 
+
+# OPTIONAL: If only RTCM3 messages should be relayed.
+relay_only_rtcm3 = 
 
 
 [GPSPlugin_options]                                   
